# sfplot

./: .gitignore  AUTHORS.rst  CellGPS.spec  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  README_new.md  REVIEWER_GUIDE.md  Thumbs.db  bootstrap_cellgps.py  build_cellgps.ps1  disable_xsdata_entrypoints.py  hook-tkinter.py  my_startup_hook.py  pyproject.toml  requirements.txt  setup.py  splash_hook.py  tox.ini
docs/: CellGPS_build_and_run_guide_en.docx  CellGPS_build_and_run_guide_en.md  CellGPS_build_and_run_guide_en_updated.docx  CellGPS_exe_analysis_and_run_guide_zh.md  conf.py  index.rst  installation.rst  reviewer_guide.rst  usage.rst
examples/: multi_sample_analysis_example.py  transcript_analysis_example.py
notebook/: Selection_1_cells_stats.csv  Selection_2_cells_stats.csv
src/sfplot/: Searcher_Findee_Score.py  TCR_distance_heatmap.py  __init__.py  binned_analysis.py  binned_analysis_gpu.py  circle_heatmap.py  circular_dendrogram.py  cli.py  compute_col_dendrogram_scores.py  compute_cophenetic_distances_from_df_memory_opt.py  data_processing.py  ghost_Searcher_with_Findee.py  multi_sample_analysis.py  plotting.py  sfplot.py  tbc_analysis.py  tbc_analysis_serial.py  transcript_analysis.py  transcript_batching.py  visium_preprocesssing.py  xenium_preprocessing.py
src/sfplot/analysis/: __init__.py  binned_analysis.py  binned_analysis_gpu.py  compute_cophenetic_distances_from_df_memory_opt.py  ghost_searcher_with_findee.py  searcher_findee_score.py  split_utils.py  tbc_analysis.py  tbc_analysis_serial.py  topology_extensions.py
src/sfplot/gui/: __init__.py  gui_app.py
src/sfplot/plotting/: __init__.py  circle_heatmap.py  circular_dendrogram.py  plotting.py  tcr_distance_heatmap.py
src/sfplot/preprocessing/: __init__.py  data_processing.py  visium_preprocessing.py  xenium_preprocessing.py
tests/: test_sfplot.py  test_topology_extensions.py  test_transcript_batching.py
