[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfplot"
version = "0.0.2"
description = "Spatial structure analysis and Search-and-Find plot generation for spatial omics data."
readme = "README.md"
authors = [
    { name = "Taobo Hu", email = "taobo.hu@scilifelab.se" },
    { name = "Mengping Long", email = "mengping.long@scilifelab.se" },
    { name = "Mats Nilsson", email = "mats.nilsson@scilifelab.se" }
]
license = { text = "MIT License" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "scanpy>=1.9",
    "scikit-learn>=1.0",
    "spatialdata_io>=0.1",
    "scipy>=1.7",
    "psutil>=5.8",
    "joblib>=1.1",
    "tqdm>=4.60",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
gui = ["PyQt5"]

[project.scripts]
sfplot-gui = "sfplot.gui.gui_app:main"

[project.urls]
Homepage = "https://github.com/hutaobo/sfplot"
Repository = "https://github.com/hutaobo/sfplot"

[tool.setuptools.packages.find]
where = ["src"]
